welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: value tableauCouleur
  tableauCouleur(5)=getCouleurSol();
  ^