welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
}

var res = new Array[Color](5);

def remplirTableau(t:Array[Color]){
  for (i<- 0 to 4){
    t(i)=getCouleurSol();
    avance();
  }
  tableauCouleur(5)=getCouleurSol();
}
